--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+Caff Studios Project/[Ll]ibrary/
+Caff Studios Project/[Tt]emp/
+Caff Studios Project/[Oo]bj/
+Caff Studios Project/[Bb]uild/
+Caff Studios Project/[Bb]uilds/
+Caff Studios Project/[Ll]ogs/
+Caff Studios Project/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -58,3 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+
+
+Game A Week Reece Beckman Sawyer/Temp/UnityLockfile
